@@ -76,17 +76,9 @@ class HTTPStreamer(Consumer):
         @returns: the url
         """
         return 'http://%s:%d%s' % (
-            self.getHostname(),
+            self.properties.get('hostname', self.hostname),
             self.getPorter().getPort(),
             self.properties.mount_point)
-
-    def getHostname(self):
-        """Fetch the hostname this stream will be published on
-        @returns: the hostname
-        """
-        if self._common.set_hostname:
-            return self._common.hostname
-        return self.properties.get('hostname', self.hostname)
 
     # Component
 
@@ -97,9 +89,6 @@ class HTTPStreamer(Consumer):
                 self._common.bandwidth_limit * 1e6)
 
         porter = self.getPorter()
-        hostname = self.getHostname()
-        if hostname:
-            properties.hostname = hostname
         properties.porter_socket_path = porter.getSocketPath()
         properties.porter_username = porter.getUsername()
         properties.porter_password = porter.getPassword()
@@ -342,6 +331,12 @@ class HTTPSpecificStep(ConsumerStep):
             self.model.hostname = hostname
             self.wizard.taskFinished()
 
+        def checkWorkerHostname(unused):
+            d = self.wizard.runInWorker(
+                self.worker, 'flumotion.worker.checks.http',
+                'runHTTPStreamerChecks')
+            d.addCallback(finished)
+
         def checkElements(elements):
             if elements:
                 f = ngettext("Worker '%s' is missing GStreamer element '%s'.",
@@ -359,7 +354,7 @@ class HTTPSpecificStep(ConsumerStep):
 
             # now check import
             d = self.wizard.checkImport(self.worker, 'twisted.web')
-            d.addCallback(finished)
+            d.addCallback(checkWorkerHostname)
             d.addErrback(importError)
 
         # first check elements
@@ -391,7 +386,7 @@ class HTTPBothStep(HTTPSpecificStep):
     name = 'HTTPStreamerBoth'
     title = _('HTTP Streamer (Audio and Video)')
     sidebarName = _('HTTP Audio/Video')
-    docSection = 'help-configuration-assistant-http-streaming-audio-video'
+    docSection = 'help-configuration-assistant-http-streaming-both'
     docAnchor = ''
     docVersion = 'local'
 
@@ -405,6 +400,9 @@ class HTTPAudioStep(HTTPSpecificStep):
     name = 'HTTPStreamerAudio'
     title = _('HTTP Streamer (Audio Only)')
     sidebarName = _('HTTP Audio')
+    docSection = 'help-configuration-assistant-http-streaming-audio-only'
+    docAnchor = ''
+    docVersion = 'local'
 
     # ConsumerStep
 
@@ -416,6 +414,9 @@ class HTTPVideoStep(HTTPSpecificStep):
     name = 'HTTPStreamerVideo'
     title = _('HTTP Streamer (Video Only)')
     sidebarName = _('HTTP Video')
+    docSection = 'help-configuration-assistant-http-streaming-video-only'
+    docAnchor = ''
+    docVersion = 'local'
 
     # ConsumerStep
 
